---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                                                         |
▌Your branch is behind 'origin/main' by 1 commit(s).                                                                    |
                                                                                                                        |
 Recent commits                                                                                                         |
 b66a0bf main add initial-file                                                                           Author Name __ |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────|
$ git fetch --all --jobs 10                                                                                             |
From file://                                                                                                             
   b66a0bf..d07f2d3  main       -> origin/main                                                                          |
styles_hash: b42c796433b2d974
